# glfw-voxelgen

./: .gitignore  .session  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: block.fs  block.vs
src/: game.c  game.h  main.c  state.h
src/render/: camera.c  camera.h  render.c  render.h  shader.c  shader.h
src/ui/: ui.c  ui.h
src/util/: algorithm.c  util.h
src/world/: block.c  block.h  chunk.c  chunk.h  world.c  world.h  worldgen.c  worldgen.h
